hover effect on slides, issue of overflow to fix

--- a/home_style.css
+++ b/home_style.css
@@ -300,9 +300,12 @@ body {
 
 .swiper {
     width: 100%;
+    max-width: 1100px;
     height: 100px;
     margin-bottom: 3rem;
     margin-top: 1rem;
+    /* overflow-y: inherit;
+    overflow-x: inherit; */
 }
 
 .swiper-slide {
@@ -312,6 +315,18 @@ body {
     align-items: center;
     background-color: var(--blue);
     border-radius: .75rem;
+}
+
+@media screen and (min-width: 729px) {
+    /* .swiper {
+
+    } */
+
+
+    .swiper-slide:hover {
+        transition: transform 0.3s ease-in;
+        transform: translate3d(0, -5px, 0);
+    }    
 }
 
 .swiper-button-prev, .swiper-button-next {
